--- a/src/background.html
+++ b/src/background.html
@@ -15,7 +15,7 @@
     <h1>Webcam Feed Example</h1>
     <video id="video" autoplay></video>
    
-  <script src="../static/test_javascript.js">
+  <script src="background.js">
     </script>
   </body>
 </html>
