--- a/src/index.html
+++ b/src/index.html
@@ -3,68 +3,69 @@
     <title>My Form</title>
     <style>
       body {
-  font-family: sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
-  background-color: #f5f5f5;
-}
+        font-family: sans-serif;
+        font-size: 14px;
+        line-height: 1.5;
+        background-color: #f5f5f5;
+      }
 
-form {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
-}
+      form {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+      }
 
-label {
-  margin-bottom: 5px;
-  font-weight: bold;
-}
+      label {
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  padding: 8px;
-  border-radius: 3px;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
-}
+      input[type="text"],
+      input[type="email"],
+      input[type="password"] {
+        padding: 8px;
+        border-radius: 3px;
+        border: 1px solid #ccc;
+        margin-bottom: 10px;
+      }
 
-input[type="submit"] {
-  padding: 10px;
-  background-color: #A2B5BB;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+      input[type="submit"] {
+        padding: 10px;
+        background-color: #a2b5bb;
+        color: #fff;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
 
-input[type="submit"]:hover {
-  background-color: #03001C;
-}
-
+      input[type="submit"]:hover {
+        background-color: #03001c;
+      }
     </style>
   </head>
   <body>
     <form id="my-form">
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required><br>
+      <input type="text" id="name" name="name" required /><br />
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required><br>
+      <input type="email" id="email" name="email" required /><br />
 
       <label for="invitation_code">Invitation code:</label>
-      <input type="invitation_code" id="invitation_code" name="invitation_code" required><br>
+      <input
+        type="invitation_code"
+        id="invitation_code"
+        name="invitation_code"
+        required
+      /><br />
 
-      <input type="submit" value="Submit">
+      <input type="submit" value="Start Test" />
     </form>
     <video id="video" autoplay></video>
     <script src="index.js"></script>
   </body>
 </html>
-
-
-
